AG-45507 fix options page notification word-break
Squashed commit of the following:

commit 64fa1bc4c31308c80ece6cbce5dab5f9a5349f93
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 25 01:17:28 2025 -0400

    fix options page notification word-break

--- a/Extension/src/pages/options/components/Notifications/notifications.pcss
+++ b/Extension/src/pages/options/components/Notifications/notifications.pcss
@@ -64,7 +64,7 @@
 
         p {
             margin: 0;
-            word-break: break-all;
+            word-break: break-word;
         }
 
         button {
